--- a/w_report_projects/views/inherit_project_task_view.xml
+++ b/w_report_projects/views/inherit_project_task_view.xml
@@ -14,6 +14,7 @@
                     <group>
                         <group>
                             <field name="observations_report_equipment_reception"/>
+                            <field name="observations_report_equipment_delivery"/>
                             <field name="conditions_report_service_order"/>
                             <field name="especial_requiriments"/>
                         </group>
