Nuevo Campo Mas grade
Nuevo Campo Mas grade

--- a/w_report_projects/report/template_project_task_equipment_delivery.xml
+++ b/w_report_projects/report/template_project_task_equipment_delivery.xml
@@ -128,11 +128,11 @@
                 </div>
                 <div class="footer">
                     <div class="row">
-                        <table style="width:30%;">
+                        <table sstyle="border-spacing:0;margin-bottom:0;" class="table">
                             <tr>
-                                <td style="border-bottom: 1px solid black;border-top: 1px solid black;border-left: 1px solid black; border-right: 1px solid black;" align="left">Observations</td>
-                                <td style="width:80%; border-left: 1px solid black; border-right: 1px solid black;border-bottom: 1px solid black;border-top: 1px solid black;"><span t-if="o.observations_report_equipment_delivery"><span t-esc="o.observations_report_equipment_delivery"/></span></td>
-                            </tr>
+                                <td width="20%" height="50" style="border: 1px solid black;vertical-align:middle;">Observations</td>
+                                <td width="80%" height="50" style="border: 1px solid black;"><span t-if="o.observations_report_equipment_delivery"><span style="font-family:'arialfont'; font-size: 14px;" t-esc="o.observations_report_equipment_delivery"/></span></td>
+                        </tr>
                         </table>
                     </div>
                     <div class="row">
