--- a/w_report_projects/report/project_task_report.xml
+++ b/w_report_projects/report/project_task_report.xml
@@ -4,7 +4,7 @@
         <record id="paper_format_report_service_order" model="report.paperformat">
             <field name="name">paperformat.report.service.format</field>
             <field name="default" eval="True"/>
-            <field name="format">A4</field>
+            <field name="format">Letter</field>
             <field name="page_width">0</field>
             <field name="page_width">0</field>
             <field name="orientation">Portrait</field>
@@ -19,7 +19,7 @@
         <record id="paper_format_report_equipment_delivery" model="report.paperformat">
             <field name="name">paperformat.report.equipment.devlivery.format</field>
             <field name="default" eval="True"/>
-            <field name="format">A4</field>
+            <field name="format">Letter</field>
             <field name="page_width">0</field>
             <field name="page_width">0</field>
             <field name="orientation">Portrait</field>
@@ -34,7 +34,7 @@
         <record id="paper_format_report_reception_equipment" model="report.paperformat">
             <field name="name">paperformat.report.reception.equipment.format</field>
             <field name="default" eval="True"/>
-            <field name="format">A4</field>
+            <field name="format">Letter</field>
             <field name="page_width">0</field>
             <field name="page_width">0</field>
             <field name="orientation">Portrait</field>
