--- a/i_add_field_gastos/views/inherit_gastos_view_from.xml
+++ b/i_add_field_gastos/views/inherit_gastos_view_from.xml
@@ -7,7 +7,8 @@
             <field name="inherit_id" ref="hr_expense.hr_expense_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='tax_ids']" position="after">
-                     <field name="sucursal_id"/>
+                      <field name="sucursal_id"/>
+                      <field name="departamento_id"/>
                     <field name="proveedor_id"/>
                     <field name="diferencia_id"/>
                 </xpath>
