--- a/i_add_field_gastos/views/inherit_gastos_view_tree.xml
+++ b/i_add_field_gastos/views/inherit_gastos_view_tree.xml
@@ -14,7 +14,7 @@
                     <field name="purchase_order_id"/>
                     <field name="sucursal_id"/>
                     <field name="departamento_id"/>
-                    <field name="diferencia_id"/>
+                    <field name="diferencia_id" sum = " TotalP  "/>
                 </xpath>
             </field>
         </record>
