--- a/w_report_projects/views/inherit_project_task_view.xml
+++ b/w_report_projects/views/inherit_project_task_view.xml
@@ -8,6 +8,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='tag_ids']" position="after">
                         <field name="number_tags"/>
+                        <field name="certificate_number"/>
                 </xpath>
                 <xpath expr="//notebook" position="after">
                     <separator string="Reports information"/>
