--- a/w_add_field_lead/views/inherit_crm_lead_view.xml
+++ b/w_add_field_lead/views/inherit_crm_lead_view.xml
@@ -18,7 +18,7 @@
 			<field name="name">inherit.crm.lead.view.add.page.ecopulse.lead
 			</field>
 			<field name="model">crm.lead</field>
-			<field name="inherit_id" ref="crm.crm_case_form_view_oppor" />
+			<field name="inherit_id" ref="crm.crm_lead_view_form" />
 			<field name="arch" type="xml">
 				<xpath expr="//field[@name='phone']" position="after">
 					<field name="rpu" />
