--- a/w_document_mod/report/_inherit_sale_report_templates.xml
+++ b/w_document_mod/report/_inherit_sale_report_templates.xml
@@ -317,7 +317,7 @@
             </div>
             <div class="row-12" style="border-bottom: 1px solid black;">
                 <span >
-                    <i><k><span t-esc="doc.user_id.name"/> </k></i>
+                    <i><k><span t-esc="doc.user_id.name"/> <span t-field="user.sign_signature" t-options-widget="&quot;image&quot;"/> </k></i>
                 </span>
             </div>
             <div class="col" style="page-break-inside: avoid;"/>
