--- a/w_document_mod/views/inherit_account_invoice_view.xml
+++ b/w_document_mod/views/inherit_account_invoice_view.xml
@@ -3,10 +3,10 @@
     <data>
         <record model="ir.ui.view" id="w_inherit_account_invoice_form_view">
             <field name="name">w.inherit.account.invoice.form.view</field>
-            <field name="model">account.invoice</field>
-            <field name="inherit_id" ref="account.invoice_form"/>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='comment']" position="after">
+                <xpath expr="//field[@name='narration']" position="after">
                     <group>
                         <field name="observations"/>
                     </group>
