--- a/w_document_mod/views/inherit_sale_order_view.xml
+++ b/w_document_mod/views/inherit_sale_order_view.xml
@@ -7,6 +7,7 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='payment_term_id']" position="after">
+                    <field name="fecha_solicitud"/>
                     <field name="attention_of"/>
                 </xpath>
             </field>
