--- a/i_add_field_empleados_vacaciones/views/view_solicitud_vacaciones.xml
+++ b/i_add_field_empleados_vacaciones/views/view_solicitud_vacaciones.xml
@@ -77,7 +77,7 @@
             <field name="name">i.add.fields.empleados.view.tree.vacaciones</field>
             <field name="model">solicitud.vacaciones</field>
             <field name="arch" type="xml">
-                <tree string="Tree Vacaciones" colors="grey:state == 'aprovado';">
+                <tree string="Tree Vacaciones">
                 <!--  <field name="name" /> -->
                 <field name="empleado_id" />
                 <field name="departamento_id"/>
@@ -142,16 +142,22 @@
             </field>
         </record>
 
+        <act_window
+            id="action_menu_vacaciones"
+            name="Permisos"
+            res_model="solicitud.vacaciones"
+            view_mode="kanban,list,form,calendar"
+        />
 
 
-        <record id="action_menu_vacaciones" model="ir.actions.act_window">
+        <!-- <record id="action_menu_vacaciones" model="ir.actions.act_window">
             <field name="name">Permisos</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">solicitud.vacaciones</field>
             <field name="view_type">form</field>
             <field name="view_mode">kanban,list,form,calendar</field>
-            <!--  <field name="context">{"search_default_user_id":1}</field> -->
-        </record>
+           
+        </record> -->
 
         <menuitem
             action="action_menu_vacaciones"
