--- a/w_service_order_reports/report/service_order_multi_template.xml
+++ b/w_service_order_reports/report/service_order_multi_template.xml
@@ -137,7 +137,7 @@
                         <div class="col-4">
                             <b>Made: </b><t t-esc="user.name" />
                             <span >
-                            <i><k><span t-esc="doc.user_id.name"/> <span t-field="user.sign_signature" t-options-widget="&quot;image&quot;"/> </k></i>
+                            <i><k> <!-- <span t-esc="doc.user_id.name"/> --> <span t-field="user.sign_signature" t-options-widget="&quot;image&quot;"/> </k></i>
                              </span>
                         </div>
                     </div>
